made sure text wraps correctly

--- a/sass/header_bar.scss
+++ b/sass/header_bar.scss
@@ -21,6 +21,7 @@
 .title {
     text-align: center;
     margin: 0;
+    overflow-wrap: anywhere;
 }
 
 
